@@ -1,6 +1,7 @@
 package vn.ctiep.jobhunter.config;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -12,19 +13,17 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 public class CorsConfig {
         @Bean
         public CorsConfigurationSource corsConfigurationSource() {
-                CorsConfiguration configuration = new CorsConfiguration();
-                configuration.setAllowedOrigins(
-                                Arrays.asList("http://localhost:3000", "http://localhost:4173",
-                                                "http://localhost:5173"));
-                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE",
-                                "OPTIONS")); // Allowed methods
-                configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type",
-                                "Accept", "x-no-retry"));
-                configuration.setAllowCredentials(true);
-                configuration.setMaxAge(3600L);
-                // How long the response from a pre-flight request can be cached by clients
+                CorsConfiguration config = new CorsConfiguration();
+                config.setAllowedOriginPatterns(List.of("http://localhost:5173"));
+                config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+                config.setAllowedHeaders(List.of("*"));
+                config.setExposedHeaders(List.of("Set-Cookie"));
+                config.setAllowCredentials(true);
+                config.setMaxAge(3600L);
+
                 UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-                source.registerCorsConfiguration("/**", configuration); // Apply this configuration to all paths
+                source.registerCorsConfiguration("/**", config);
                 return source;
         }
 }
+
